# ml_server

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DevelopmentGuide.md  Dockerfile  HowToRun.md  README.md  app.py  config.intranet.json  config.json  config.py  config.yml  deployment.md  docker-compose.override.yml  docker-compose.yml  fake_ebsd_model.py  fake_ml_model_server.py  feedback.json  gunicorn.conf.py  ml_server-celery-beat.service  ml_server-celery.service  ml_server.service  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
config/: config.intranet.json  tools.example.yaml
docs/: ADMIN.md  ARCHITECTURE.asc  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_DOCKER.md  DEPLOYMENT_INTRANET.md  DEVELOPMENT.md  DEVELOPMENT_GUIDE.md  HOW_TO_RUN.md  REDIS_BACKUP.md  TROUBLESHOOTING.md  WORKFLOW_OVERVIEW.md  Website_improvements_chatgpt.pptx  admin_help.md  plugin_developer_guide.md
examples/: README.md  plugin_demo.py  run_embedded_dummy.py  run_pdf_tools_admin.py
microstructure-analysis-flask/: README.md  app.py  config.yml  requirements.txt
microstructure_server/: __init__.py
scripts/: fake_ebsd_model.py  fake_ml_model_server.py  start_ebsd_model_service.py  start_ml_model_service.py
templates/: admin_feedback.html  base.html  ebsd_cleanup.html  feedback_section.html  help_faq.html  home.html  hydride_segmentation.html  super_resolution.html
tests/: conftest.py  test_admin_dashboard.py  test_api_check_ebsd_model_status.py  test_api_check_model_status.py  (+24 more)
(+93 files in other folders)
